# OPC_DA_Telegram_bot

./: .gitignore  CMakeLists.txt  README.md
img/: opcdabot.rc
opc-test-files/: OPC_Test.SDB  OPC_Test.SYM  OPC_Test.SYM_XML  OPC_Test.pro  OPC_Test000000c8r.ci  OPC_Test000000c8r.ri  OPC_TestVis.txt
src/: CMakeLists.txt  copcclient.cpp  copcclient.h  filelogger.cpp  filelogger.h  hintinputdialog.cpp  hintinputdialog.h  logger.cpp  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  opcbrowsewidget.cpp  opcbrowsewidget.h  opcbrowsewidget.ui  opcclientworker.cpp  opcclientworker.h  opcdatamanager.cpp  opcdatamanager.h  opctag.cpp  opctag.h  opctagpostprocessingwidget.cpp  opctagpostprocessingwidget.h  opctagpostprocessingwidget.ui  opcvaluesviewer.cpp  opcvaluesviewer.h  opcvaluesviewer.ui  plaintextconsole.h  res.qrc  selectitemstablewigget.cpp  selectitemstablewigget.h  tgbotconfigurationwidget.cpp  tgbotconfigurationwidget.h  tgbotconfigurationwidget.ui  tgbotmanager.cpp  tgbotmanager.h  tgbotsettingswidget.cpp  tgbotsettingswidget.h  tgbotsettingswidget.ui  (+16 more)
styles/: styles.qss
